--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>CSS Crashcourse Project</title>
+		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
-		Hello World
+		<div class="container">
+			<div class="item">Item 1</div>
+			<div class="item">Item 2</div>
+			<div class="item">Item 3</div>
+			<div class="item">Item 4</div>
+			<div class="item">Item 5</div>
+			<div class="item">Item 6</div>
+			<div class="item">Item 7</div>
+			<div class="item">Item 8</div>
+			<div class="item">Item 9</div>
+		</div>
 	</body>
 </html>
